unpackaged/objects/BE_Project__c.object
<CustomObject>
    <fields>
        <fullName>Abbreviation__c</fullName>
        <label>Abbreviation</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <label>BrainEngine Project</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Project</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BrainEngine Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>